finished index and quiz html files and started with css

--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c50ed4be03.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>NBA Quiz</title>
 </head>
 <body>
-    <h1 class="heading">
-        <img class="logo" src="assets/images/NBAUniversal.webp"> NBA Quiz
-    </h1>
-    <p>Let's find out whether you are a real NBA fan!</p>
-    <a href="quiz.html" id="home-btn">Start Here!<i class="fa-solid fa-basketball"></i></a>
+    <main>
+        <section class="quiz-box">
+            <div id="home">
+                <h1 class="heading">
+                    <img class="logo" src="assets/images/NBA normal.png">
+                </h1>
+                <h1 class="heading">NBA Quiz</h1>
+                <p>Let's find out whether you are a real NBA fan!</p>
+                <a href="quiz.html" id="home-btn">Start Here!<i class="fa-solid fa-basketball"></i></a>
+            </div>
+        </section>
+    </main>
 
     <script src="assets/js/script.js"></script>
 </body>
