--- a/quiz.html
+++ b/quiz.html
@@ -3,12 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c50ed4be03.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>NBA Quiz</title>
 </head>
 <body>
-    
+    <main>
+        <section class="quiz-box">
+            <div id="questions">
+                <div class="question-part">
+                    <h1 id="question">This is the question</h1>
+                </div>
+                <div class="answers-part">
+                    <div class="answer-box">
+                        <p class="answer">A</p>
+                        <p class="answer-text" data-number="1" id="A"></p>
+                    </div>
+                    <div class="answer-box">
+                        <p class="answer">B</p>
+                        <p class="answer-text" data-number="2" id="B"></p>
+                    </div>
+                    <div class="answer-box">
+                        <p class="answer">C</p>
+                        <p class="answer-text" data-number="3" id="C"></p>
+                    </div>
+                    <div class="answer-box">
+                        <p class="answer">D</p>
+                        <p class="answer-text" data-number="4" id="D"></p>
+                    </div>
+                </div>
+                <div class="counter-part">
+                    <p>Score: <span id="current-score"></span></p>
+                    <p>Question: <span id="current-question"></span></p>
+                </div>
+            </div>
+        </section>
+
+        <aside class="modal-container" id="modal">
+            <div class="modal-content" id="inside-modal">
+                <div class="final-score">
+                    <p id="f-score">Score</p>
+                </div>
+                <div>
+                    <p id="try-again">Try Again!</p>
+                </div>
+                <div>
+                    <p id="quit-quiz">Quit</p>
+                </div>
+            </div>
+        </aside>
+    </main>
 
     <script src="assets/js/script.js"></script>
 </body>
